--- a/jarditoubootstrap/contact.html
+++ b/jarditoubootstrap/contact.html
@@ -89,7 +89,7 @@
               <input class="form-control mr-sm-2" type="text" name="ville" id="ville">
 
           <label for="email">Email *:</label>
-              <input class="form-control mr-sm-2" type="email" name="email" id="email" value="Dave.LOPER@afpa.fr" required>
+              <input class="form-control mr-sm-2" type="email" name="email" id="email" placeholder="Dave.LOPER@afpa.fr"  required>
                 <span id='missMail'></span><br>
 
   </fieldset>
