--- a/jarditoubootstrap/tableau.html
+++ b/jarditoubootstrap/tableau.html
@@ -56,7 +56,7 @@
 
 
 <!-- tableau -->
-<table>
+<table class="table table-hover table-striped">
   <h2>tableau</h2>
     <hr>
     <thead class="thead thead-expand-lg navbar-light bg-light">
@@ -70,8 +70,8 @@
             <th class="col-2">Couleur</th>
         </tr>
     </thead>
-        <tr class="bg-warning">
-            <td><img src="src/img/7.jpg" alt="Aramis" width="120" height="auto"></td>
+        <tr class="table-warning ">
+            <td><img class="img-fluid" src="src/img/7.jpg" alt="Aramis" width="70%" height="auto" display: block></td>
             <td>7</td>
             <td>Barbecues</td>
             <td>Aramis</td>
@@ -79,15 +79,15 @@
             <td>Brun</td>
         </tr>
         <tr>
-            <td><img src="src/img/8.jpg" alt="Athos" width="120" height="auto"></td>
+            <td><img class="img-fluid" src="src/img/8.jpg" alt="Athos" width="70%" height="auto"></td>
             <td>8</td>
             <td>Barbecues</td>
             <td>Athos</td>
             <td>249.99€</td>
             <td>Noir</td>
         </tr>
-        <tr class="bg-warning">
-          <td><img src="src/img/11.jpg" alt="Clatronic" width="120" height="auto"></td>
+        <tr class="table-warning ">
+          <td><img class="img-fluid" src="src/img/11.jpg" alt="Clatronic" width="70%" height="auto"></td>
             <td>11</td>
             <td>Barbecues</td>
             <td>Clatronic</td>
@@ -95,15 +95,16 @@
             <td>Chrome</td>
         </tr>
         <tr>
-            <td><img src="src/img/12.jpg" alt="Camping" width="120" height="auto"></td>
+            <td><img class="img-fluid" src="src/img/12.jpg" alt="Camping" width="70%" height="auto"></td>
             <td>12</td>
             <td>Barbecues</td>
-            <td>      </div>
-              Noir</td>
+            <td>Camping</td>
+            <td>88,00€</td>
+            <td>Noir</td>
         </tr>
-        <tr class="bg-warning">
+        <tr class="table-warning ">
 
-            <td><img src="src/img/13.jpg" alt="Brouette" width="120" height="auto"></td>
+            <td><img class="img-fluid" src="src/img/13.jpg" alt="Brouette" width="70%" height="auto"></td>
             <td>13</td>
             <td>Brouette</td>
             <td>Green</td>
