--- a/alexelec/horaires.html
+++ b/alexelec/horaires.html
@@ -4,37 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- code feuille de style css bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet"> <!-- lien CSS -->
+    <div class="container">
+    <table class="table table-striped col-3">
+        <h2>Horaires</h2>
+          <hr>
+          <thead class="thead thead-expand-lg navbar-light bg-light">
+            <div class="row">
+                <tr>
+                    <th class="col-1">Jour</th>
+                    <th class="col-1">Ouverture</th>
+                 <th class="col-1">Fermeture</th>
+                </tr>
+          </thead>
+            <tr>
+                <td>Lundi</td>
+                <td>8h00</td>
+                <td>19h00</td>
+            </tr>
+            <tr>
+                <td>Mardi</td>
+                <td>8h00</td>
+                <td>19h00</td>
+            </tr>
+            <tr>
+                <td>Mercredi</td>
+                <td>8h00</td>
+                <td>19h00</td>
+            </tr>
+            <tr>
+                <td>Mercredi</td>
+                <td>8h00</td>
+                <td>19h00</td>
+            </tr>
+              <tr>
+                <td>Jeudi</td>
+                <td>8h00</td>
+                <td>19h00</td>
+              </tr>
+              <tr>
+                <td>Vendredi</td>
+                <td>8h00</td>
+                <td>19h00</td>
+              </tr>
+              <tr>
+                <td>Samedi</td>
+                <td>9h00</td>
+                <td>19h00</td>
+              </tr>
+              <tr>
+                <td>Dimanche</td>
+                <td>9h00</td>
+                <td>12h00</td>
+              </tr>
+            </div>  <!-- fin div class row -->
+          </tbody>    
+      </table>
+    </div>  <!-- fin div container -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="error-template">
-                <h1>
-                    Oops!</h1>
-                <h2>
-                    404 Not Found</h2>
-                <div class="error-details">
-                    Sorry, an error has occured, Requested page not found!
-                </div>
-                <div class="error-actions">
-                    <a href="index.html" class="btn btn-primary btn-lg mr-2"><span class="glyphicon glyphicon-home"></span>
-                        Retour a l'accueil </a>
-                    <a href="contact.html" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 </body>
 </html>
